# MixedTeamProtocol

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py  build.sh  mtrbc-demo.sh
cmake/: FindMunkRes.cmake  FindRtDB.cmake
include/ext/: PlayerId.hpp  Roles.hpp
include/int/: AdapterRTDB.hpp  MixedTeamProtocolImpl.hpp  PlayerPacket.hpp
mtp/: CMakeLists.txt
mtp/include/ext/: BallPossession.hpp  MixedTeamProtocol.hpp  Object.hpp  PlayerId.hpp  Pose.hpp  Referee.hpp  Roles.hpp  TeamMember.hpp
mtp/include/int/: AdapterRTDB.hpp  Communication.hpp  Errors.hpp  MixedTeamProtocolImpl.hpp  Player.hpp  PlayerPacket.hpp  PlayerState.hpp  RoleAllocation.hpp
mtp/src/: AdapterRTDB.cpp  Communication.cpp  MixedTeamProtocol.cpp  MixedTeamProtocolImpl.cpp  Player.cpp  PlayerId.cpp  Referee.cpp  RoleAllocation.cpp  Roles.cpp
mtp/src/RoleAllocation/: BruteForce.cpp  KuhnMunkres.cpp  LinearProgramming.cpp  MinPref.cpp  RoleAllocation.cpp
mtp/tst/: ClientSpoofer.cpp  MatchSimulation.cpp  MatchSimulation.hpp  MatchSimulationChecks.cpp  MatchSimulationChecks.hpp  RobotClient.cpp  RobotClient.hpp  TestCase.hpp  TestRoleAllocation.cpp  TestRoleAllocation.py  clearHistoryTests.cpp  databaseLinkTrick.py  matchTests.cpp  trace2html.py
mtp/tst/config/: rtdb2_configuration.xml
mtrbc/: CMakeLists.txt  build.sh  clean.sh  rtdb2_refbox.xml
mtrbc/src/: CMakeLists.txt  RefboxCommand.cpp  RefboxCommand.h  RefboxProtocol2020Client.cpp  RefboxProtocol2020Client.h  example.cpp  main.cpp
src/: MixedTeamProtocolImpl.cpp  RoleAllocation.cpp
tst/: TestRoleAllocation.py  matchTests.cpp
